Fix form submission in index.html

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <section id="contact">
             <h1>Get in Touch</h1>
             <p>Feel free to reach out to me if you have any questions or would like to discuss a potential project.</p>
-            <form name="contact">
+            <form name="contact" netlify>
                 <input type="email" name="email">
                 <button type="submit">Send Message</button>
             </form>
