Mise à jour des redirections, amélioration du contenu et du style de la page d'accueil, et refonte du formulaire de contact

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <ul>
                 <div>
                     <h1>Ludovic Morin</h1>
-                    <h2>I'm a passionate web developer with a focus on creating beautiful and functional websites. Let's work together to bring your ideas to life.</h2>
+                    <h2>I am a Canadian student with a passion for web development, I specialize in creating aesthetically pleasing and functional websites.</h2>
                     <div class="options">
                         <a href="/work" class="work"><button>View My Work</button></a>
                         <a href="#contact" class="contact"><button>Contact Me</button></a>
@@ -62,13 +62,21 @@
                 <h1>My Recent Projects</h1>
                 <h3>Check out some of the websites and applications I've designed and developed.</h3>
                 <div class="projects">
-                    <a>
-                        <h2>Phat PI</h2>
-                        <p>Description 1</p>
+                    <a href="https://ortracker.app" target="_blank">
+                        <h2>OR Tracker</h2>
+                        <p>It is a bot designed specifically for the community of the OR server, facilitating the seamless tracking of current records.</p>
                     </a>
-                    <a>
+                    <a href="https://github.com/abstra208/phat-pi" target="_blank">
+                        <h2>Phat PI</h2>
+                        <p>It is a web application designed to control a Scroll Phat HD screen on a Raspberry Pi.</p>
+                    </a>
+                    <a href="https://abstra208.github.io/About-Nothing-1/" target="_blank">
                         <h2>About Nothing</h2>
-                        <p>Description 2</p>
+                        <p>It is a small website about the company Nothing. It is primarily built using HTML, CSS, and JavaScript.</p>
+                    </a>
+                    <a href="https://abstra208.com">
+                        <h2>Abstra208</h2>
+                        <p>My personal website, built using HTML, CSS, and JavaScript.</p>
                     </a>
                 </div>
             </div>
@@ -85,7 +93,7 @@
                     </a>
                     <a>
                         <h2>Back-End Development</h2>
-                        <p>Experience with Node.js, Next.js, and Express.</p>
+                        <p>Experience with Node.js, Next.js, Discord.js and Express.</p>
                     </a>
                     <a>
                         <h2>Other</h2>
@@ -95,13 +103,16 @@
             </div>
         </section>
         <section id="contact">
-            <h1>Get in Touch</h1>
-            <p>Feel free to reach out to me if you have any questions or would like to discuss a potential project.</p>
-            <form name="contact" netlify>
-                <input type="email" name="email">
-                <button type="submit">Send Message</button>
-            </form>
-            <p>I'll get back to you as soon as possible.</p>
+            <div id="form-contact">
+                <h1>Get in Touch</h1>
+                <p>Feel free to reach out to me if you have any questions or would like to discuss a potential project.</p>
+                <form name="contact" netlify>
+                    <textarea placeholder="Message" name="content" rows="5" cols="30"></textarea>
+                    <input placeholder="Email" type="email" name="email">
+                    <button type="submit"><h2>Send Message</h2></button>
+                </form>
+                <p>I'll get back to you as soon as possible.</p>
+            </div>
         </section>
     </main>
     <footer>
