--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                 <h1>Get in Touch</h1>
                 <p>Feel free to reach out to me if you have any questions or would like to discuss a potential project.</p>
                 <form name="contact" netlify>
-                    <textarea placeholder="Message" name="content" rows="5" cols="30"></textarea>
-                    <input placeholder="Email" type="email" name="email">
+                    <textarea placeholder="Message" name="content" rows="5" cols="30" required></textarea>
+                    <input placeholder="Email" type="email" name="email" required>
                     <button type="submit"><h2>Send Message</h2></button>
                 </form>
                 <p>I'll get back to you as soon as possible.</p>
