--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div id="form-contact">
                 <h1>Get in Touch</h1>
                 <p>Feel free to reach out to me if you have any questions or would like to discuss a potential project.</p>
-                <form name="contact" netlify>
+                <form name="contact" netlify action="/static/pages/success" method="POST" data-netlify="true">
                     <textarea placeholder="Message" name="content" rows="5" cols="30" required></textarea>
                     <input placeholder="Email" type="email" name="email" required>
                     <button type="submit"><h2>Send Message</h2></button>
