--- a/index.html
+++ b/index.html
@@ -106,9 +106,15 @@
             <div id="form-contact">
                 <h1>Get in Touch</h1>
                 <p>Feel free to reach out to me if you have any questions or would like to discuss a potential project.</p>
-                <form name="contact" netlify action="/static/pages/success" method="POST" data-netlify="true">
+                <form
+                    name="contact"
+                    method="POST"
+                    data-netlify-recaptcha="true"
+                    data-netlify="true"
+                    action="/static/pages/success">
                     <textarea placeholder="Message" name="content" rows="5" cols="30" required></textarea>
                     <input placeholder="Email" type="email" name="email" required>
+                    <div data-netlify-recaptcha="true"></div>
                     <button type="submit"><h2>Send Message</h2></button>
                 </form>
                 <p>I'll get back to you as soon as possible.</p>
