Ajout d'une classe pour le reCAPTCHA et mise à jour des styles pour le formulaire de contact

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     action="/static/pages/success">
                     <textarea placeholder="Message" name="content" rows="5" cols="30" required></textarea>
                     <input placeholder="Email" type="email" name="email" required>
-                    <div data-netlify-recaptcha="true"></div>
+                    <div class="captcha" data-netlify-recaptcha="true"></div>
                     <button type="submit"><h2>Send Message</h2></button>
                 </form>
                 <p>I'll get back to you as soon as possible.</p>
