--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <section id="contact">
             <div id="form-contact">
                 <h1>Get in Touch</h1>
-                <p>Feel free to reach out to me if you have any questions or would like to discuss a potential project.</p>
+                <p>Feel free to reach out to me if you have any questions.</p>
                 <form
                     name="contact"
                     method="POST"
