Update project links in index.html
Replaced the 'About Nothing' link with 'Arts et TIC' link.

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                         <h2>Phat PI</h2>
                         <p>It is a web application designed to control a Scroll Phat HD screen on a Raspberry Pi.</p>
                     </a>
-                    <a href="https://abstra208.github.io/About-Nothing-1/" target="_blank">
-                        <h2>About Nothing</h2>
-                        <p>It is a small website about the company Nothing. It is primarily built using HTML, CSS, and JavaScript.</p>
+                    <a href="https://artstic.crealab.ca/" target="_blank">
+                        <h2>Arts et TIC</h2>
+                        <p>A website for the concentration at La Camaradère high school.</p>
                     </a>
                     <a href="https://abstra208.com">
                         <h2>Abstra208</h2>
