--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <h2>Phat PI</h2>
                         <p>It is a web application designed to control a Scroll Phat HD screen on a Raspberry Pi.</p>
                     </a>
-                    <a href="https://artstic.crealab.ca/" target="_blank">
+                    <a href="https://arts-tic.crealab.ca/" target="_blank">
                         <h2>Arts et TIC</h2>
                         <p>A website for the concentration at La Camaradère high school.</p>
                     </a>
