Add link to Crealab in index.html

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                     <div class="options">
                         <a href="/work" class="work"><button>View My Work</button></a>
                         <a href="#contact" class="contact"><button>Contact Me</button></a>
+                        <a href="https://crealab.ca" class="contact"><button>Crealab</button></a>
                     </div>
                 </div>
             </ul>
